# RustNAS

./: Cargo.toml  README.md
src/: main.rs
src/genetics/: genome.rs
src/model/: mod.rs  network.rs  trainer.rs
